[package]
name = "polkadot-rpc"
version = "0.8.24"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"  }
sp-api = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"  }
sp-consensus = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"  }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"}
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"}
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"}
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-keystore = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"}
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
