[package]
name = "polkadot-rpc"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
beefy-gadget = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "apopiak-xcm-origin" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "apopiak-xcm-origin" }
