[package]
name = "polkadot-rpc"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "15.1.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "statemint" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "statemint" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
parity-scale-codec = { version = "2.0.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
beefy-gadget = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "statemint" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "statemint" }
