[package]
name = "polkadot-network-test"
version = "0.8.14"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["test-helpers"], branch = "bkchr-fix-txpool-high-number-of-validations" }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "bkchr-fix-txpool-high-number-of-validations" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
