[package]
name = "polkadot-service"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
beefy-primitives = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "apopiak-xcm-origin" }
beefy-gadget = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "apopiak-xcm-origin" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin", optional = true }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

# Substrate Other
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

# External Crates
futures = "0.3.12"
hex-literal = "0.3.1"
tracing = "0.1.25"
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.23"
kvdb = "0.9.0"
kvdb-rocksdb = { version = "0.11.0", optional = true }

# Polkadot
polkadot-node-core-proposer = { path = "../core/proposer" }
polkadot-overseer = { path = "../overseer" }
polkadot-parachain = { path = "../../parachain" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-primitives = { path = "../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-subsystem = { package = "polkadot-node-subsystem", path = "../subsystem" }
polkadot-node-subsystem-util = { path = "../subsystem-util" }
polkadot-runtime-parachains = { path = "../../runtime/parachains" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot" }
kusama-runtime = { path = "../../runtime/kusama" }
westend-runtime = { path = "../../runtime/westend" }
rococo-runtime = { path = "../../runtime/rococo" }

# Polkadot Subsystems
polkadot-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
polkadot-availability-distribution = { path = "../network/availability-distribution", optional = true }
polkadot-availability-recovery = { path = "../network/availability-recovery", optional = true }
polkadot-collator-protocol = { path = "../network/collator-protocol", optional = true }
polkadot-gossip-support = { path = "../network/gossip-support", optional = true }
polkadot-network-bridge = { path = "../network/bridge", optional = true }
polkadot-node-collation-generation = { path = "../collation-generation", optional = true }
polkadot-node-core-av-store = { path = "../core/av-store", optional = true }
polkadot-node-core-backing = { path = "../core/backing", optional = true }
polkadot-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
polkadot-node-core-candidate-selection = { path = "../core/candidate-selection", optional = true }
polkadot-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
polkadot-node-core-chain-api = { path = "../core/chain-api", optional = true }
polkadot-node-core-provisioner = { path = "../core/provisioner", optional = true }
polkadot-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
polkadot-statement-distribution = { path = "../network/statement-distribution", optional = true }
polkadot-approval-distribution = { path = "../network/approval-distribution", optional = true }
polkadot-node-core-approval-voting = { path = "../core/approval-voting", optional = true }

[dev-dependencies]
polkadot-test-client = { path = "../test/client" }
env_logger = "0.8.2"

[features]
default = ["db", "full-node"]
db = ["service/db"]
full-node = [
	"polkadot-node-core-av-store",
	"polkadot-node-core-approval-voting",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"polkadot-collator-protocol",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-selection",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
	"polkadot-approval-distribution",
	"sc-finality-grandpa-warp-sync",
	"kvdb-rocksdb"
]

runtime-benchmarks = [
	"polkadot-runtime/runtime-benchmarks",
	"kusama-runtime/runtime-benchmarks",
	"westend-runtime/runtime-benchmarks",
	"rococo-runtime/runtime-benchmarks"
]
try-runtime = [
	"polkadot-runtime/try-runtime",
	"kusama-runtime/try-runtime",
	"westend-runtime/try-runtime",
	"rococo-runtime/try-runtime",
]
