[package]
name = "polkadot-test-service"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4"
log = "0.4.8"
rand = "0.7.3"
tempfile = "3.1.0"

# Polkadot dependencies
polkadot-primitives = { path = "../../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-runtime-common = { path = "../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-test-runtime = { path = "../../runtime/test-runtime" }

# Substrate dependencies
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
frame-system = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
pallet-staking = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-client-api = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-consensus = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-executor = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-informant = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-network = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sp-keyring = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep", default-features = false }
serde_json = "1.0"
substrate-test-utils = { git = "https://github.com/paritytech/substrate", tag = "polkadot-0-8-25-dep" }
tokio = { version = "0.2", features = ["macros"] }
