[package]
name = "polkadot-test-client"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "statemint" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
futures = "0.3.12"
