[package]
name = "polkadot-test-service"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.2"
tracing = "0.1.25"
rand = "0.8.3"
tempfile = "3.2.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin", default-features = false }
serde_json = "1.0.61"
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
tokio = { version = "0.2", features = ["macros"] }
